--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,9 @@ pydantic==2.5.2
 pydantic_core==2.14.5
 pymongo==4.6.0
 pytest==7.4.3
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+six==1.16.0
 sniffio==1.3.0
 starlette==0.27.0
 tomli==2.0.1
